# chat-sdk-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  audit.toml  deny.toml
.github/workflows/: ci.yml
crates/chat-sdk/: Cargo.toml
crates/chat-sdk-cli/: Cargo.toml
crates/chat-sdk-cli/src/: main.rs
crates/chat-sdk/src/: adapter.rs  card.rs  command.rs  discord.rs  error.rs  event.rs  format.rs  lib.rs  model.rs  oauth.rs  slack.rs  state.rs  streaming.rs  webhook.rs
