[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/quantum-box/chat-sdk-rs"
description = "Rust Chat Service Abstraction Library - CLI, OAuth, AI Agent ready"

[workspace.dependencies]
chat-sdk = { path = "crates/chat-sdk" }
chat-sdk-cli = { path = "crates/chat-sdk-cli" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP
reqwest = { version = "0.12", features = ["json"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# OAuth
oauth2 = { version = "5", features = ["reqwest"] }

# HTTP server (OAuth callback)
axum = "0.8"

# Directories
dirs = "6"

# Open browser
open = "5"

# Async trait
async-trait = "0.1"

# URL encoding
urlencoding = "2"

# HMAC signature verification
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Testing
tokio-test = "0.4"
