[package]
name = "chat-sdk-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for chat-sdk-rs - send/receive messages across chat platforms"

[[bin]]
name = "chat-sdk"
path = "src/main.rs"

[dependencies]
chat-sdk.workspace = true
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
