[package]
name = "chat-sdk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Chat service abstraction library with adapter pattern"

[features]
default = ["slack", "discord"]
slack = []
discord = []

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
reqwest.workspace = true
oauth2.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio-test.workspace = true
